test/TestSuite/Scheduler/Errors/minend.tjp
project test "Test" "1.0" 2007-03-28 +2m

task t "Task" {
	end 2007-03-29
# MARK: warning 3 minend
	minend 2007-03-30
}

